--- a/style.css
+++ b/style.css
@@ -7,11 +7,9 @@ body {
     margin: 0;
 }
 
-
 a {
     text-decoration: none;
 }
-
 
 a:hover {
     text-decoration: underline;
@@ -25,7 +23,6 @@ header {
     top: 16px;
     font-size: 13px;
 }
-
 
 .head-left {
     margin: 7px 0 0 10px;
@@ -72,6 +69,7 @@ header {
     width: 30px;
     height: 30px;
 }
+
 
 .head-right-icons {
     min-width: 114px;
@@ -251,3 +249,149 @@ footer {
 }
 
 
+#floating-popup-apps {
+    display: none;
+    
+    position: fixed;
+    top: 0;
+    right: 0;
+
+    width: 340px;
+    height: 468px;
+
+    margin: 55px 27px 0 0;
+
+    border: 1px solid black;
+
+    overflow-y: scroll; /*  */
+
+    box-shadow: 0 1px 2px 0 rgba(60,64,67,.30), 0 2px 6px 2px rgba(60,64,67,.15);
+    background: #fff;
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 8px;
+}
+
+#floating-popup-apps::-webkit-scrollbar {
+    width: 14px;
+}   
+
+#floating-popup-apps::-webkit-scrollbar-thumb {
+    /* 这里是怎么实现的 */
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    background-color: rgba(0, 0, 0, 0.15);
+   
+}
+
+#floating-popup-apps ul {
+    padding: 0 0 20px 12px;
+}
+
+#floating-popup-apps li {
+    display: inline-block;
+}
+
+#floating-popup-apps ul a {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    text-decoration: none;
+    color: rgba(0,0,0,0.87);
+    width: 100px;
+    height: 100px;
+}
+
+#floating-popup-apps ul a:hover {
+    background-color:#f8f8ff;
+}
+
+
+#floating-popup-apps img {
+    margin: auto;
+    padding: 6px;
+    width: 52px;
+    height: 52px;
+}
+
+#floating-popup-apps span {
+    display: inline-block;
+    text-align: center;
+
+    color: #404040;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: .09px;
+
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+#floating-popup-apps span:hover {
+    white-space: normal;
+    /* overflow: visible; */
+    /* text-overflow: unset; */
+}
+
+.more-from-google {
+    width: 100%;
+    
+    text-align: center;
+}
+
+#floating-popup-apps .more-from-google a {
+    
+    display: inline-block;
+
+    background-color: #fff;
+    border: 1px solid #dadce0;
+    border-radius: 4px;
+    color: #1a73e8;
+    
+    font: 14px/16px 'Google Sans',Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
+    margin: 16px 0 20px 0;
+    
+    text-decoration: none;
+
+    padding: 10px 24px;
+    width: auto;
+}
+
+#floating-popup-apps .more-from-google a:hover {
+    background-color:#f8f8ff;
+}
+
+/*
+div#container {
+    height: 200px;
+    width: 300px;
+    overflow: scroll;
+    margin: 10px;
+    border: 1px solid #000;
+}
+div#content {
+    height: 1000px;
+}
+::-webkit-scrollbar {
+    width: 14px;
+    height: 18px;
+}
+::-webkit-scrollbar-thumb {
+    height: 6px;
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    -webkit-border-radius: 7px;
+    background-color: rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
+}
+::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+    display: none;
+}
+::-webkit-scrollbar-corner {
+    background-color: transparent;
+}*/
