--- a/style.css
+++ b/style.css
@@ -276,12 +276,20 @@ footer {
 }   
 
 #floating-popup-apps::-webkit-scrollbar-thumb {
-    /* 这里是怎么实现的 */
+
     border: 4px solid rgba(0, 0, 0, 0);
     background-clip: padding-box;
     border-radius: 7px;
-    -webkit-border-radius: 7px;
     background-color: rgba(0, 0, 0, 0.15);
+    /*
+    For anyone wondering, 
+    the magic here is background-clip: padding-box 
+    which causes the border of the element to be cut off 
+    (along with the background color under it), 
+    so by setting the border to a fully transparent color 
+    it will cause a padding effect matching the border's width. 
+    Without that rule the background color would be visible through the border.
+    */
    
 }
 
@@ -296,8 +304,7 @@ footer {
 #floating-popup-apps ul a {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-
+    justify-content: space-evenly;
     text-decoration: none;
     color: rgba(0,0,0,0.87);
     width: 100px;
@@ -308,9 +315,8 @@ footer {
     background-color:#f8f8ff;
 }
 
-
 #floating-popup-apps img {
-    margin: auto;
+    margin: 0 auto;
     padding: 6px;
     width: 52px;
     height: 52px;
@@ -332,14 +338,12 @@ footer {
 
 #floating-popup-apps span:hover {
     white-space: normal;
-    /* overflow: visible; */
-    /* text-overflow: unset; */
 }
 
 .more-from-google {
     width: 100%;
-    
     text-align: center;
+
 }
 
 #floating-popup-apps .more-from-google a {
@@ -364,34 +368,33 @@ footer {
     background-color:#f8f8ff;
 }
 
-/*
-div#container {
-    height: 200px;
-    width: 300px;
-    overflow: scroll;
-    margin: 10px;
-    border: 1px solid #000;
-}
-div#content {
-    height: 1000px;
-}
-::-webkit-scrollbar {
-    width: 14px;
-    height: 18px;
-}
-::-webkit-scrollbar-thumb {
-    height: 6px;
-    border: 4px solid rgba(0, 0, 0, 0);
-    background-clip: padding-box;
-    -webkit-border-radius: 7px;
-    background-color: rgba(0, 0, 0, 0.15);
-    -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
-}
-::-webkit-scrollbar-button {
-    width: 0;
-    height: 0;
+
+#setting-floating-popup {
     display: none;
+
+    position: fixed;
+    bottom: 30px;
+    right: 29px;
+
+    padding: 10px 0;
+    border: 1px solid #999;
+
+    background: #fff;
+    box-shadow: 0 2px 4px rgba(0,0,0,.2);
+    z-index: 1;
 }
-::-webkit-scrollbar-corner {
-    background-color: transparent;
-}*/
+
+#setting-floating-popup a {
+    display: block;
+    line-height: 44px;
+    padding: 0 20px 0 21px;
+    margin: 2px 10px 0;
+    text-decoration: none;
+    font-size: 14px;
+    color: #5f6368;
+    cursor: pointer;
+}
+
+#setting-floating-popup a:hover {
+    text-decoration: underline;
+}
