--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header {
     display: inline-block;
 }
 
-.head-right-google-apps {
+#head-right-google-apps {
     cursor: pointer;
     width: 30px;
     height: 30px;
@@ -155,25 +155,29 @@ footer {
     padding-top: 27px;
 }
 
-
 .search-bar-wrap {
     background: #fff;
     border: 1px solid #dfe1e5;
     border-radius: 24px;
-
-    /* height: 42px;
-    width: 580px; */
+    /* border-radius: 24px 24px 0 0; */
     height: 44px;
     width: 582px;
     margin: 0 auto;
 
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center;  
+
+    position: relative;     /* setup for search popup window*/
     
 }
 
-.search-text {
+.search-bar-wrap:hover {
+    /* offset-x | offset-y | blur-radius | spread-radius | color */ 
+    box-shadow: 0 1px 3px 1px rgba(60,64,67,.30)/*, 0 2px 6px 2px rgba(60,64,67,.15)*/;
+}
+
+#search-text {
     background-color: transparent;
     -webkit-tap-highlight-color: transparent;
     line-height: 34px;
@@ -190,9 +194,8 @@ footer {
     display: inline-block;
     height: 20px;
     width: 20px;
-    /* border: 1px solid red; */
-    padding-left: 14px;
-    padding-bottom: 3px;
+    
+    padding: 0 14px 3px 14px;
 }
 
 .left-search-icon svg {
@@ -381,7 +384,7 @@ footer {
 
     background: #fff;
     box-shadow: 0 2px 4px rgba(0,0,0,.2);
-    z-index: 1;
+
 }
 
 #setting-floating-popup a {
@@ -398,3 +401,62 @@ footer {
 #setting-floating-popup a:hover {
     text-decoration: underline;
 }
+
+
+#search-floating-popup {
+    display: none;
+    
+    position: absolute;
+    top: 46px;
+
+    width: 582px;
+    /* height: 100px; */
+
+    background: #fff;
+    border-radius: 0 0 24px 24px;
+    box-shadow: 0 4px 6px 0 rgba(32,33,36,0.28);
+
+}
+
+.try-searching-for {
+    letter-spacing: 0.75px;
+    color: #80868b;
+    font-size: 14px;
+    line-height: 16px;
+    margin: 0 20px 0 16px;
+    padding: 8px 0 8px 0;
+}
+
+.search-history {
+    display: flex;
+    align-items: center;
+    padding: 6px 0;
+}
+
+.search-history:hover {
+    cursor: default;
+    background-color:#f1f1f1;
+}
+
+.search-history a {
+    font-size: 16px;
+    color: #212121;
+}
+
+.search-history a:hover {
+    text-decoration: none;
+    cursor: default;
+}
+
+.report-inappropriate-predictions {
+    padding: 2px 10px;
+    text-align: right;
+
+}
+
+.report-inappropriate-predictions a {
+    color: #70757a;
+    font-style: italic;
+    cursor: pointer;
+}
+
