--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ footer {
     width: 100%;
     height: 100%;
 
-    z-index: 10; /* Sit on top */
+    z-index: 1; /* Sit on top */
     /* border: 1px solid black; */
 }
 
@@ -366,13 +366,12 @@ footer {
     border-radius: 4px;
     color: #1a73e8;
     
-    font: 14px/16px 'Google Sans',Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
+    font: 14px/16px Arial,sans-serif;
     margin: 16px 0 20px 0;
     
     text-decoration: none;
 
     padding: 10px 24px;
-    width: auto;
 }
 
 #floating-popup-apps .more-from-google a:hover {
@@ -382,7 +381,7 @@ footer {
 #setting-floating-popup-modal {
     display: none;
     position: fixed;
-    z-index: 10;
+    z-index: 1;
     bottom: 0;
     right: 0;
 
@@ -427,7 +426,6 @@ footer {
     top: 45px;
 
     width: 582px;
-    /* height: 100px; */
 
     background: #fff;
     border-radius: 0 0 24px 24px;
