--- a/style.css
+++ b/style.css
@@ -172,11 +172,6 @@ footer {
     
 }
 
-.search-bar-wrap:hover {
-    /* offset-x | offset-y | blur-radius | spread-radius | color */ 
-    box-shadow: 0 1px 3px 1px rgba(60,64,67,.30);
-    /* box-shadow: 0 4px 3px 0 rgba(32,33,36,0.28); */
-}
 
 #search-text {
     background-color: transparent;
@@ -464,12 +459,12 @@ footer {
 }
 
 .report-inappropriate-predictions {
-    padding: 2px 10px;
+    padding: 2px 20px;
     text-align: right;
-
 }
 
 .report-inappropriate-predictions a {
+    font-size: 11px;
     color: #70757a;
     font-style: italic;
     cursor: pointer;
