--- a/style.css
+++ b/style.css
@@ -306,14 +306,14 @@ footer {
     max-height: calc(100vh - 55px - 100px);
     /* vh: Equal to 1% of the height of the viewport's initial containing block. */
 }
-
+/*
 .account-popup-content hr {
     border-top: 1px solid #e8eaed;
-}
+}*/
 
 .line-seperator {
     display: block;
-    border: 1px solid #e8eaed;
+    border-top: 1px solid #e8eaed;
 }
 
 .account-popup-content::-webkit-scrollbar {
