--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ a:hover {
 .head-right-google-apps {
     display: inline-block;
     cursor: pointer;
-    
     padding: 4px 5px;
     margin-left: 14px;
     margin-right: 13px;
@@ -63,16 +62,12 @@ a:hover {
     display: block;
     cursor: default;
     color: #fff;
-
     border: 1px solid #4285f4;
     font-weight: bold;
     outline: none;  /* right outside the border */
-
     background: -webkit-linear-gradient(top,#4387fd,#4683ea);
     font-size: 13px;
-
     margin-right: 24px;
-    
     padding: 0 12px;
     border-radius: 2px;
     line-height: 28px;
@@ -86,16 +81,13 @@ body > footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-
+    min-width: 980px;
     border-top: 1px solid #e4e4e4;
     background-color: #f2f2f2;
-    
     padding-left: 3px;
     padding-right: 30px;
-
     line-height: 40px;
     font-size: 14px;
-
     box-sizing: border-box;
 }
 
@@ -125,14 +117,11 @@ body > footer a {
     background: #fff;
     border: 1px solid #dfe1e5;
     border-radius: 24px;
-
     height: 44px;
     width: 582px;
     margin: 0 auto;
-
     justify-content: space-between;
     align-items: center;  
-
     position: relative;     /* setup for search popup window*/
 }
 
@@ -143,26 +132,15 @@ body > footer a {
     line-height: 34px;
     font-size: 16px;
     width: 487px;
-    /* border: 1px solid red; */
     padding: 1px 0;
     border: none;
     outline: none;  /* no outline when clicking */
-
 }
 
 .left-search-icon {
     display: inline-block;
     height: 20px;
     width: 20px;
-    
-    padding: 0 14px 3px 14px;
-}
-
-.left-search-icon {
-    display: inline-block;
-    height: 20px;
-    width: 20px;
-    
     padding: 0 14px 3px 14px;
     fill: #9AA0A6;
 }
@@ -188,16 +166,13 @@ body > footer a {
     border: 1px solid #f2f2f2;
     border-radius: 4px;
     color: #5F6368;
-
     font-size: 14px;
     height: 36px;
-
     min-width: 54px;
     cursor: pointer;
 }
 
 .google-search-btn {
-    /* top | right | bottom | left */
     margin: 11px 10px 11px 4px;
     padding: 0 16px;
 }
@@ -207,7 +182,6 @@ body > footer a {
     padding: 0 16px;
 }
 
-
 .submitbar-wrap input[type="submit"]:hover {
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
@@ -215,63 +189,50 @@ body > footer a {
     border: 1px solid #c6c6c6;
     color: #222;
 }
-
+/*
 .top-right-modal {
     display: none;
-    
     position: fixed;
     top: 0;
-
     width: 100%;
     height: 100%;
+    
+}*/
 
-    z-index: 1; /* Sit on top */
-    /* border: 1px solid black; */
-}
-
-.top-right-modal hr {
+.top-right-popup-content hr {
     border-top: 1px solid #e8eaed;
     margin: 20px 0;
 }
 
-
 .top-right-popup-content {
+    display: none;
     position: absolute;
     top: 55px; 
     right: 27px;
-
     width: 340px;
     height: 468px;
-
     flex-direction: column;
-
     box-shadow: 0 1px 2px 0 rgba(60,64,67,.30), 0 2px 6px 2px rgba(60,64,67,.15);
     background: #fff;
     border: 1px solid rgba(0,0,0,0.2);
     border-radius: 8px;
-
-    overflow-y: scroll; /*  */
+    overflow-y: scroll;
+    z-index: 1; /* Sit on top */
 }
 
 .account-popup-content {
     display: none; /* control by javascript */
-
     position: absolute;
     top: 55px;
     right: 27px;
-
     width: 354px;
-
     background: #fff;
     box-shadow: 0 2px 10px rgba(0,0,0,.2);
     border: 1px solid #ccc;
     border-radius: 8px;
-
     overflow-y: auto;
     overflow-x: hidden;
-
-    /* 100% - top 55px - bottom 100px */
-    max-height: calc(100vh - 55px - 100px);
+    max-height: calc(100vh - 55px - 100px);     /* 100% - top 55px - bottom 100px */
     /* vh: Equal to 1% of the height of the viewport's initial containing block. */
 }
 
@@ -316,13 +277,10 @@ body > footer a {
     position: absolute;
     bottom: 0;
     right: 0;
-
     height: 32px;
     width: 32px;
     border-radius: 50%;
-
     background: #fff;
-
     justify-content: center;
     align-items: center;
 }
@@ -330,13 +288,10 @@ body > footer a {
 .portrait a {
     display: block;
     border-radius: 50%;
-
     background: #fff;
     width: 26px;
     height: 26px;
-
     box-shadow: 0 1px 1px 0 rgba(65,69,73,0.3), 0 1px 3px 1px rgba(65,69,73,0.15);
-
 }
 
 .portrait svg {
@@ -363,26 +318,17 @@ body > footer a {
 
 .manage-account {
     display: block;
-
     background-color: #ffffff;
-    
     border: 1px solid #dadce0;
     border-radius: 100px;
-    
     color: #3c4043;
-    
     font: 500 14px/16px Google Sans,Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
-    
     letter-spacing: .25px;
-    
     margin: 16px auto 0 auto;
     max-width: 254px;
     padding: 8px 16px;
-
     text-align: center;
-    
     text-decoration: none;
-
     text-overflow: ellipsis;
     overflow: hidden;
 }
@@ -409,7 +355,6 @@ body > footer a {
 }
 
 .account {
-    display: flex;
     justify-content: center;
 }
 
@@ -420,12 +365,10 @@ body > footer a {
 .account img {
     width: 32px;
     height: 32px;
-
     border-radius: 50%;
 }
 
 .first-row {
-    display: flex;
     justify-content: space-between;
 }
 
@@ -441,10 +384,8 @@ body > footer a {
 }
 
 .second-row {
-    display: flex;
     justify-content: flex-start;
     align-items: flex-start;
-    
 }
 
 .second-row span {
@@ -469,19 +410,15 @@ body > footer a {
     background-color: #1a73e8;
     color: #fff;
     border-radius: 4px;
-
     display: inline-block;
-
     font-family: Google Sans,Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
     font-size: 14px;
     font-weight: 500;
     letter-spacing: .25px;
     line-height: 16px;
-    
     padding: 10px 24px;
     margin-top: 14px;
     margin-right: 12px;
-
     text-decoration: none;
     
 }
@@ -514,7 +451,6 @@ body > footer a {
     text-decoration: none;
 
     cursor: pointer;
-
 }
 
 .third-row button:hover {
@@ -528,7 +464,6 @@ body > footer a {
 .add-another-account {
     cursor: pointer;
 
-    display: flex;
     justify-content: flex-start;
     align-items: center;
 
@@ -573,12 +508,11 @@ body > footer a {
     background-color: #f7f8f8;
 }
 
-.foot {
-    display: flex;
+.account-popup-content footer {
     justify-content: center;
 }
 
-.foot span {
+.account-popup-content footer span {
     display: inline-block;
     color: #5f6368;
     display: inline-block;
@@ -587,7 +521,7 @@ body > footer a {
     padding: 4px 0;
 }
 
-.foot a {
+.account-popup-content footer a {
     color: #5f6368;
     display: inline-block;
     font: 12px/16px Arial,sans-serif;
@@ -596,13 +530,12 @@ body > footer a {
     border-radius: 4px;
 }
 
-.foot a:hover {
+.account-popup-content footer a:hover {
     text-decoration: none;
     background-color: #f7f8f8;
 }
 
 .apps-icon-section {
-    display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
 }
@@ -651,12 +584,10 @@ body > footer a {
 .apps-icon-section span {
     display: inline-block;
     text-align: center;
-
     color: #404040;
     font-size: 14px;
     line-height: 16px;
     letter-spacing: .09px;
-
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -667,25 +598,16 @@ body > footer a {
 }
 
 .more-from-google {
-    width: 100%;
-    text-align: center;
-}
-
-.more-from-google a {
     display: inline-block;
-
     background-color: #fff;
     border: 1px solid #dadce0;
     border-radius: 4px;
     color: #1a73e8;
-    
     font: 14px/16px Arial,sans-serif;
-    margin: 16px 0 20px 0;
-    
+    margin: 16px auto 20px auto;
     text-decoration: none;
     padding: 10px 24px;
-    
-    width: auto;
+    width: 113px;
     height: 16px;
 }
 
@@ -693,27 +615,17 @@ body > footer a {
     background-color:#f8f8ff;
 }
 
-.setting-modal-layer {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    bottom: 0;
-    right: 0;
-
-    width: 100%;    /* Full width */
-    height: 100%;   /* Full height */
-}
 
 .setting-floating-popup {
+    display: none;
     position: absolute;
     bottom: 30px;
     right: 29px;
-
     padding: 10px 0;
     border: 1px solid #999;
-
     background: #fff;
     box-shadow: 0 2px 4px rgba(0,0,0,.2);
+    z-index: 1;
 }
 
 .setting-floating-popup a {
@@ -733,15 +645,11 @@ body > footer a {
 
 .search-popup-content {
     display: none;
-    
     position: absolute;
     top: 45px;
-
     width: 582px;
-
     background: #fff;
     border-radius: 0 0 24px 24px;
-
     box-shadow: 0 3px 3px 1px rgba(60,64,67,.30);
 }
 
