--- a/style.css
+++ b/style.css
@@ -191,11 +191,13 @@ body > footer a {
 
 .google-apps-popup {
     display: none;
+    box-sizing: border-box;
     position: absolute;
     top: 55px; 
     right: 27px;
     width: 340px;
-    height: 468px;
+    height: 456px;
+    padding: 10px 5px;
     flex-direction: column;
     box-shadow: 0 1px 2px 0 rgba(60,64,67,.30), 0 2px 6px 2px rgba(60,64,67,.15);
     background: #fff;
@@ -208,6 +210,61 @@ body > footer a {
 .google-apps-popup hr {
     border-top: 1px solid #e8eaed;
     margin-bottom: 5px;
+}
+
+.google-apps-popup::-webkit-scrollbar {
+    width: 16px;
+}   
+
+.google-apps-popup::-webkit-scrollbar-thumb {
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    border-radius: 7px;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+
+.apps-icon-section {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    padding: 10px 2px 10px 10px;
+}
+
+.apps-icon-section a {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    color: rgba(0,0,0,0.87);
+    width: 100px;
+    height: 100px;
+}
+
+.apps-icon-section a:hover {
+    text-decoration: none;
+    background-color: #f6fafe;
+    border-radius: 8px;
+} 
+
+.apps-icon-section img {
+    margin: 0 auto;
+    padding: 6px;
+    width: 52px;
+    height: 52px;
+}
+
+.apps-icon-section span {
+    display: inline-block;
+    text-align: center;
+    color: #404040;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: .09px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.apps-icon-section span:hover {
+    white-space: normal;
 }
 
 .account-popup-content {
@@ -510,62 +567,6 @@ body > footer a {
 .account-popup-content footer a:hover {
     text-decoration: none;
     background-color: #f7f8f8;
-}
-
-.apps-icon-section {
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    padding: 17px 0 20px 12px;
-}
-
-.apps-icon-section a {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    color: rgba(0,0,0,0.87);
-    width: 100px;
-    height: 100px;
-    padding-left: 3px;
-}
-
-.apps-icon-section a:hover {
-    text-decoration: none;
-    background-color: #f6fafe;
-    border-radius: 8px;
-} 
-
-.google-apps-popup::-webkit-scrollbar {
-    width: 14px;
-}   
-
-.google-apps-popup::-webkit-scrollbar-thumb {
-    border: 4px solid rgba(0, 0, 0, 0);
-    background-clip: padding-box;
-    border-radius: 7px;
-    background-color: rgba(0, 0, 0, 0.15);
-}
-
-.apps-icon-section img {
-    margin: 0 auto;
-    padding: 6px;
-    width: 52px;
-    height: 52px;
-}
-
-.apps-icon-section span {
-    display: inline-block;
-    text-align: center;
-    color: #404040;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: .09px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-
-.apps-icon-section span:hover {
-    white-space: normal;
 }
 
 .more-from-google {
