--- a/react-google-homepage/src/FloatingPopupBox/AccountPopup/AccountPopup.css
+++ b/react-google-homepage/src/FloatingPopupBox/AccountPopup/AccountPopup.css
@@ -1,8 +1,8 @@
 .account-popup-content {
-    display: none; /* control by javascript */
+    display: block; /* control by javascript */
     position: absolute;
     top: 55px;
-    /* right: 27px;     */
+    right: 27px;    
     width: 354px;
     background: #fff;
     box-shadow: 0 2px 10px rgba(0,0,0,.2);
@@ -112,6 +112,7 @@
   
 .manage-account:hover {
     text-decoration: none;
+    background-color: #f7f8f8;
 }
   
 .other-accounts {
