--- a/react-google-homepage/src/FloatingPopupBox/GoogleAppsPopup/GoogleAppsPopup.css
+++ b/react-google-homepage/src/FloatingPopupBox/GoogleAppsPopup/GoogleAppsPopup.css
@@ -1,5 +1,5 @@
 .google-apps-popup {
-    display: none;
+    display: block;
     box-sizing: border-box;
     position: absolute;
     top: 55px; 
@@ -15,7 +15,7 @@
     overflow-y: scroll;
     z-index: 1;     /* Sit on top */
 }
-  
+
 .google-apps-popup hr {
     border-top: 1px solid #e8eaed;
     margin-bottom: 5px;
