--- a/react-google-homepage/src/Content/SearchForm/SearchForm.css
+++ b/react-google-homepage/src/Content/SearchForm/SearchForm.css
@@ -15,30 +15,14 @@
     position: relative;     /* setup for search popup window*/
 }
   
-.submitbar-wrap {
-    margin: 0 auto;
-    padding-top: 18px;
-    height: 70px;
-    width: 571px;
-    justify-content: center;
+.searchText {
+    background-color: transparent;
+    -webkit-tap-highlight-color: transparent;
+    line-height: 34px;
+    font-size: 16px;
+    width: 487px;
+    padding: 1px 0;
+    border: none;
+    outline: none;  /* no outline when clicking */
 }
 
-.submitbar-wrap input[type="submit"] {
-    background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
-    background-color: #f2f2f2;
-    border: 1px solid #f2f2f2;
-    border-radius: 4px;
-    color: #5F6368;
-    font-size: 14px;
-    height: 36px;
-    min-width: 54px;
-    cursor: pointer;
-}
-
-.submitbar-wrap input[type="submit"]:hover {
-    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
-    background-color: #f8f8f8;
-    border: 1px solid #c6c6c6;
-    color: #222;
-}
