--- a/react-google-homepage/src/containers/Main/Main.css
+++ b/react-google-homepage/src/containers/Main/Main.css
@@ -1,3 +1,8 @@
+.container {
+    width: 100%;
+    margin-top: 152px;
+}
+
 .search-form {
     width: 100%;
     padding-top: 27px;
@@ -25,4 +30,5 @@
     border: none;
     outline: none;  /* no outline when clicking */
 }
+
 
